# NLP

./: .gitignore  README.md  pyproject.toml
notebooks/: Categorize_news_articles.ipynb  nltk_text_tutorial.ipynb  spacy_word_simalrities.ipynb
